Fix skills wrapping

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -165,15 +165,18 @@ a:hover {
     padding-left: 0;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .skills ul > li {
+    flex: 0 0 auto;
     background-color: #4F3F6F;
     border: 1px solid #6F6F8F;
     padding: 0.33rem;
     border-radius: 1rem;
     font-size: 0.8rem;
     margin-right: 0.25rem;
+    margin-bottom: 0.25rem;
 }
 
 .experience > div.outline-3 {   
